[gd_scene load_steps=2 format=3 uid="uid://dp2wkujwqg77a"]

[ext_resource type="Script" path="res://scripts/manager/end_manager.gd" id="1_2i3td"]

[node name="End" type="CanvasLayer"]
script = ExtResource("1_2i3td")

[node name="control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="color" type="ColorRect" parent="control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.180392, 0.180392, 0.180392, 1)

[node name="label_title" type="Label" parent="control"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -124.0
offset_top = 32.0
offset_right = 124.0
offset_bottom = 88.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 30
text = "Game Over"
horizontal_alignment = 1
vertical_alignment = 1

[node name="label_message" type="Label" parent="control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -156.0
offset_top = -32.0
offset_right = 156.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
text = "VocÃª sobreviveu por 3 dias"
horizontal_alignment = 1
vertical_alignment = 1

[node name="button_restart" type="Button" parent="control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -104.0
offset_top = -80.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
text = "Restart"

[node name="button_menu" type="Button" parent="control"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -80.0
offset_right = 120.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
text = "Menu"

[connection signal="pressed" from="control/button_restart" to="." method="_on_button_restart_pressed"]
[connection signal="pressed" from="control/button_menu" to="." method="_on_button_menu_pressed"]
